# MDPerTool_GUI

./: .gitignore  CHANGELOG.md  CITATION.md  GUI_BASE.ui  LICENSE  LICENSE.md  MAIN_GUI.ui  MANIFEST.in  PyMolWidget.py  README.md  README_2.md  README_try.md  __init__.py  app_functions.py  app_modules.py  apply_pdbfixer.py  browse_menu.py  builder.py  checkBoxMenu_inComboBox.py  checkBox_menu.py  check_openmm.py  cx_setup.py  deneme_dosyasi.py  env.yml  environment.yml  gifs.qrc  loading_bar.py  mdpertool-0.0.1-pyhd8ed1ab_0.tar.bz2  message.py  meta.yaml  mplwidget.py  no_gui.py  omm_runner.py  pyproject.toml  readme.txt  script_runner.py  setup.cfg  setup.py  setup_exe.py  test_precision.py  (+4 more)
Download/: .xdp-pdbid_fixed_ph7.pdb-WAju5Z  energy_perturbation_trajectory3.xtc  energy_perturbation_trajectory4.xtc  modified_energy_file_3.csv  modified_energy_file_4.csv  output.dcd  reference_energy_file.csv  responseTimes_3.csv  responseTimes_4.csv  without_energy_perturbation_trajectory.xtc
analysis/: 2d_network.html  VisJS_Widget.py  __init__.py  createRNetwork.py  multiproc_net_calc.py  pdbsum_conservation_puller.py
conda.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
environments/: common_pac.yml  linux64_env.yml  win64_env.yml
envs/: cross_platform.yml  macos_gui_py39.yml  win-x64.txt  win64_updated.yml  win_py311.yml  win_py312.yml  winx64_env.yml
gui/: MAIN_GUI.ui  den.py  icons_path.qrc
mdpertool/: README.md  SER345_VAL258.gml  __init__.py  __main__.py  _compat.py  _version.py  cross_plat.yml  launcher.py  readme.py  readme.txt  temp.py  temp_script.py  trial.py  trial.txt  ui_main.py  ui_main.spec
mdpertool.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  entry_points.txt  requires.txt  top_level.txt
mdpertool/Download/: energy.csv  example_responseTimes_file.csv  responseTimes_4.csv
mdpertool/analysis/: 2d_network.html  VisJS_Widget.py  __init__.py  createRNetwork.py  example.gml  multiproc_net_calc.py
mdpertool/example/: structural_rearrangement_data.csv  trail.py
mdpertool/gui/: MAIN_GUI.ui  __init__.py  big_icons.qrc  files.qrc  splash_screen.ui  ui_styles.py
mdpertool/no_gui/: Classic_MD.py  MD_1.py  MD_2.py  Run_Model.py  Velocity_Changer.py  __init__.py  apply_pdbfixer.py  cli_window.py  constants.py  divide_pdb.py  energy_component.py  energy_decomposition_from_trajectory.py  get_positions_from_trajectory_file.py  no_gui.py  omm_units.py  pdb_trajectory_parser.py  response_time_creator.py
mdpertool/output/: energy_perturbation_trajectory4.dcd  energy_perturbation_trajectory4.xtc  modified_energy_file_4.csv  reference_energy_file.csv  responseTimes_4.csv  (+2 more)
no_gui/: 3IBF_G188L_2_50ns_200ps_290590_x4_perturb_Total_reTimes.csv  Classic_MD.py  Energy_decomposition_from_pdb_trajectory.py  MD_1.py  MD_2.py  Run_Model.py  Velocity_Changer.py  __init__.py  apply_pdbfixer.py  energy_decomposition_from_trajectory.py  example.txt  get_positions_from_trajectory_file.py  optimizepme.py  response_time_creator.py  response_time_graph_creator.py  write_outputs.py
src/: PyMolWidget.py  PyMol_PySide2.py  app_functions.py  builder.py  mplwidget.py  omm_runner.py  template_sctipt.txt  ui_functions.py  ui_splash_screen.py
tests/: __init__.py  test_mdpertool.py
(+74 files in other folders)
