[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdpertool"
version = "0.0.1.dev1"
description = "A Software Tool for Investigation of Allosteric Communication within Protein Structures via Energy Dissipation in Molecular Dynamics Simulations"
readme = "README.md"
authors = [{ name = "Halil I. Ozdemir", email = "halil.ibrahim.oozdemir@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["allostery", 
        "Energy dissipation", 
        "Dynamics",
        ]
dependencies = [
    "numpy",
    "biopython",
    "matplotlib",
    "mdtraj",
    "networkx",
    "pandas",
    "parmed",
    "prody",
    "pyopengl",
    "pyqtgraph",
    "pyqtwebengine",
    "pystache",
    "pyvis",
    "mdanalysis",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/bio-otto/MDPerTool_GUI"

[project.scripts]
mdpertool = "mdpertool.ui_main:run_mdpertool"

