[metadata]
name = mdpertool
version = 0.0.1.dev1
license_files = LICENSE.md
author = Halil I. Ozdemir
author_email = halil.ibrahim.oozdemir@gmail.com
description = A Software Tool for Investigating Allosteric Communication via Energy Dissipation Concepts
long_description = file: README.md
url = https://github.com/bio-otto/MDPerTool_GUI
classifiers =
    Development Status :: 2 - Pre-Alpha
    Development Status :: 4 - Beta
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Environment :: MacOS X
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Academic Free License (AFL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
