[metadata]
name = mdpertool
version = 0.0.1.dev3
license_file = LICENSE.md
author = Halil I. Ozdemir
author_email = halil.ibrahim.oozdemir@gmail.com
description = A Software Tool for Investigation of Allosteric Communication via Energy Dissipation Concept
#long_description = file: README.md
description_file = README.md