[metadata]
name = mdpertool
version = 0.0.1.dev4
license_files = LICENSE.md
author = Halil I. Ozdemir
author_email = halil.ibrahim.oozdemir@gmail.com
description = A Software Tool for Investigation of Allosteric Communication via Energy Dissipation Concept
long_description = file: README.md
#description_file = README.md
long_description_content_type = text/markdown